Bug fix: Misc UI fixes to New Clipping dialog (issue #135)

--- a/wx-src/pages/new.css
+++ b/wx-src/pages/new.css
@@ -39,6 +39,12 @@ textarea {
     text-align: start !important;
 }
 
+.folder-picker-menubtn[value="0"] {
+    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNiIgaGVpZ2h0PSIxNiIgdmlld0JveD0iMCAwIDE2IDE2Ij4KICA8cGF0aCBkPSJNOCwxMkwzLDcsNCw2bDQsNCw0LTQsMSwxWiIgZmlsbD0iIzZBNkE2QSIgLz4KPC9zdmc+Cg=="), url("../img/clippings-root.svg");
+    background-position: calc(100% - 4px) center, 8px;
+    background-repeat: no-repeat;
+}
+
 .folder-picker-menubtn:hover {
     background-color: #ebebeb;
 }
@@ -53,13 +59,25 @@ textarea {
     background-color: #d4d4d4;
 }
 
+.popup-bkgrd {
+    display: none;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: 1003;
+    opacity: 0.4;
+}
+
 .folder-tree-popup {
     position: absolute;
     visibility: hidden;
     border: 1px solid #b1b1b1;
     background-color: white;
     box-shadow: 4px 4px 2px -2px #8F8F8F;
-    z-index: 100;
+    z-index: 1100;
 }
 
 #new-clipping-fldr-tree-popup {
@@ -149,6 +167,6 @@ ul.fancytree-container {
     width: 286px;
     height: 160px;
     margin-top: 0;
-    z-index: 100;
+    z-index: 1101;
 }
 
